Upgrade to seam solder 3.0.0.Beta1

--- a/tests/base/pom.xml
+++ b/tests/base/pom.xml
@@ -93,8 +93,8 @@
       </dependency>
 
       <dependency>
-         <groupId>org.jboss.weld</groupId>
-         <artifactId>weld-extensions</artifactId>
+         <groupId>org.jboss.seam.solder</groupId>
+         <artifactId>seam-solder</artifactId>
          <scope>provided</scope>
       </dependency>
 
