--- a/tests/jetty-openjpa/pom.xml
+++ b/tests/jetty-openjpa/pom.xml
@@ -74,10 +74,10 @@
       </dependency>
 
       <dependency>
-         <groupId>org.jboss.seam.xml</groupId>
-         <artifactId>seam-xml-config</artifactId>
-         <scope>test</scope>
-      </dependency>      
+         <groupId>org.jboss.seam.config</groupId>
+         <artifactId>seam-config-xml</artifactId>
+         <version>${seam.xml.version}</version>
+      </dependency>  
 
       <dependency>
          <groupId>org.slf4j</groupId>
@@ -104,8 +104,8 @@
       </dependency>
 
       <dependency>
-         <groupId>org.jboss.weld</groupId>
-         <artifactId>weld-extensions</artifactId>
+         <groupId>org.jboss.seam.solder</groupId>
+         <artifactId>seam-solder</artifactId>
          <scope>compile</scope>
       </dependency>
 
