--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
    <properties>
       <seam.version>3.0.0.b01</seam.version>
       <jboss-javaee6-spec.version>1.0.0.Beta4</jboss-javaee6-spec.version>
-      <weld.extensions.version>1.0.0.Beta1</weld.extensions.version>
+      <seam.solder.version>3.0.0.Beta1</seam.solder.version>
       <hibernate.core.version>3.6.0.Final</hibernate.core.version>
       <hibernate.search.version>3.3.0.Beta2</hibernate.search.version>
       <arquillian.version>1.0.0.Alpha4</arquillian.version>
@@ -48,7 +48,7 @@
       <weld.version>1.1.0.Beta1</weld.version>
       <hsqldb.version>1.8.0.10</hsqldb.version>
       <openjpa.version>2.0.0</openjpa.version>
-      <seam.xml.version>3.0.0.Alpha3</seam.xml.version>
+      <seam.xml.version>3.0.0-SNAPSHOT</seam.xml.version>
    </properties>
 
    <dependencyManagement>
@@ -91,15 +91,15 @@
          </dependency>
          
          <dependency>
-            <groupId>org.jboss.seam.xml</groupId>
-            <artifactId>seam-xml-config</artifactId>
+            <groupId>org.jboss.seam.config</groupId>
+            <artifactId>seam-config-xml</artifactId>
             <version>${seam.xml.version}</version>
          </dependency>
 
          <dependency>
-            <groupId>org.jboss.weld</groupId>
-            <artifactId>weld-extensions</artifactId>
-            <version>${weld.extensions.version}</version>
+            <groupId>org.jboss.seam.solder</groupId>
+            <artifactId>seam-solder</artifactId>
+            <version>${seam.solder.version}</version>
             <scope>compile</scope>
          </dependency>
 
