--- a/api/pom.xml
+++ b/api/pom.xml
@@ -1,16 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+   <modelVersion>4.0.0</modelVersion>
+
    <parent>
-      <artifactId>seam-persistence-parent</artifactId>
       <groupId>org.jboss.seam.persistence</groupId>
+      <artifactId>seam-persistence-parent</artifactId>
       <version>3.0.0-SNAPSHOT</version>
+      <relativePath>../pom.xml</relativePath>
    </parent>
 
-   <modelVersion>4.0.0</modelVersion>
-   <groupId>org.jboss.seam.persistence</groupId>
    <artifactId>seam-persistence-api</artifactId>
    <packaging>jar</packaging>
-   <version>3.0.0-SNAPSHOT</version>
+
    <name>Seam Persistence API</name>
+   <!-- url required for JAR Manifest -->
+   <url>${project.parent.url}</url> 
 
    <prerequisites>
       <maven>3.0</maven>
@@ -18,18 +21,6 @@
    
    <dependencies>
    
-      <dependency>
-         <groupId>javax.enterprise</groupId>
-         <artifactId>cdi-api</artifactId>
-         <scope>provided</scope>
-      </dependency>
-      
-      <dependency>
-         <groupId>javax.transaction</groupId>
-         <artifactId>jta</artifactId>
-         <scope>provided</scope>
-      </dependency>  
-      
       <dependency>
          <groupId>org.jboss.spec</groupId>
          <artifactId>jboss-javaee-6.0</artifactId>
@@ -46,11 +37,17 @@
 	  
    </dependencies>
 
-   <scm>
-      <connection>scm:git:git://github.com/seam/persistence.git</connection>
-      <developerConnection>scm:git:git@github.com:seam/persistence.git</developerConnection>
-      <url>http://github.com/seam/persistence</url>
-   </scm>
+   <build>
+      <plugins>
+         <!-- no test phase for API module -->
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+               <skip>true</skip>
+            </configuration>
+         </plugin>
+      </plugins>
+   </build>
 
 </project>
-
