--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
    <parent>
       <groupId>org.jboss.seam</groupId>
       <artifactId>seam-parent</artifactId>
-      <version>3</version>
+      <version>5</version>
    </parent>
 
    <artifactId>seam-persistence-parent</artifactId>
@@ -12,14 +12,14 @@
    <version>3.0.0-SNAPSHOT</version>
 
    <packaging>pom</packaging>
-   <name>Seam Persistence Module Parent POM</name>
+   <name>Seam Persistence Module</name>
 
    <prerequisites>
       <maven>3.0</maven>
    </prerequisites>
 
    <description>
-		The Parent for Seam Persistence Modules
+		The Parent for the Seam Persistence Module
    </description>
 
    <url>http://www.seamframework.org</url>
@@ -27,28 +27,15 @@
    <modules>
       <module>api</module>
       <module>impl</module>
+      <module>combined</module>
       <module>tests/base</module>
       <module>tests/jetty-hibernate</module>
       <module>tests/jetty-openjpa</module>
    </modules>
 
    <properties>
-      <seam.version>3.0.0.b01</seam.version>
-      <jboss-javaee6-spec.version>1.0.0.Beta4</jboss-javaee6-spec.version>
-      <seam.solder.version>3.0.0.Beta1</seam.solder.version>
-      <hibernate.core.version>3.6.0.Final</hibernate.core.version>
-      <hibernate.search.version>3.3.0.Beta2</hibernate.search.version>
-      <arquillian.version>1.0.0.Alpha4</arquillian.version>
-      <jboss.server.manager.version>1.0.3.GA</jboss.server.manager.version>
-      <jboss-as-client.version>6.0.0.20100721-M4</jboss-as-client.version>
-      <jboss.logging.version>3.0.0.Beta4</jboss.logging.version>
-      <jetty.version>7.0.2.v20100331</jetty.version>
-      <el.version>2.2</el.version>
-      <jsp.version>2.2</jsp.version>
-      <weld.version>1.1.0.Beta1</weld.version>
-      <hsqldb.version>1.8.0.10</hsqldb.version>
-      <openjpa.version>2.0.0</openjpa.version>
-      <seam.xml.version>3.0.0-SNAPSHOT</seam.xml.version>
+      <seam.version>3.0.0.b04</seam.version>
+      <seam.config.version>3.0.0-SNAPSHOT</seam.config.version>
    </properties>
 
    <dependencyManagement>
@@ -56,7 +43,7 @@
 
          <dependency>
             <groupId>org.jboss.seam</groupId>
-            <artifactId>seam</artifactId>
+            <artifactId>seam-bom</artifactId>
             <version>${seam.version}</version>
             <scope>import</scope>
             <type>pom</type>
@@ -64,7 +51,7 @@
 
          <!--
             Need to use dependencyManagement to override
-            org.jboss.seam:seam for submodules
+            org.jboss.seam:seam-bom for submodules
          -->
          <dependency>
             <groupId>org.jboss.seam.persistence</groupId>
@@ -77,174 +64,43 @@
             <artifactId>seam-persistence-impl</artifactId>
             <version>${project.version}</version>
          </dependency>
-
-         <dependency>
-            <groupId>org.jboss.seam.persistence</groupId>
-            <artifactId>seam-persistence-tests-base</artifactId>
-            <version>${project.version}</version>
-         </dependency>
          
-         <dependency>
-            <groupId>hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-            <version>${hsqldb.version}</version>
-         </dependency>
-         
-         <dependency>
-            <groupId>org.jboss.seam.config</groupId>
-            <artifactId>seam-config-xml</artifactId>
-            <version>${seam.xml.version}</version>
-         </dependency>
-
-         <dependency>
-            <groupId>org.jboss.seam.solder</groupId>
-            <artifactId>seam-solder</artifactId>
-            <version>${seam.solder.version}</version>
-            <scope>compile</scope>
-         </dependency>
-
-         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>${hibernate.core.version}</version>
-            <optional>true</optional>
-         </dependency>
-
-         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-search</artifactId>
-            <version>${hibernate.search.version}</version>
-            <optional>true</optional>
-         </dependency>
-
-         <dependency>
-            <groupId>org.jboss.spec</groupId>
-            <artifactId>jboss-javaee-6.0</artifactId>
-            <version>${jboss-javaee6-spec.version}</version>
-            <type>pom</type>
-            <scope>provided</scope>
-         </dependency>
-
-         <dependency>
-            <groupId>org.jboss.logging</groupId>
-            <artifactId>jboss-logging</artifactId>
-            <version>${jboss.logging.version}</version>
-            <scope>test</scope>
-         </dependency>
-
          <dependency>
             <groupId>org.jboss.seam.persistence</groupId>
             <artifactId>seam-persistence</artifactId>
             <version>${project.version}</version>
          </dependency>
 
-         <!-- Arquillian -->
          <dependency>
-            <groupId>org.jboss.arquillian.container</groupId>
-            <artifactId>arquillian-jbossas-managed-6</artifactId>
-            <version>${arquillian.version}</version>
+            <groupId>org.jboss.seam.persistence</groupId>
+            <artifactId>seam-persistence-tests-base</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
          </dependency>
 
          <dependency>
-            <groupId>org.jboss.arquillian.container</groupId>
-            <artifactId>arquillian-jbossas-remote-6</artifactId>
-            <version>${arquillian.version}</version>
+            <groupId>org.jboss.seam.config</groupId>
+            <artifactId>seam-config-xml</artifactId>
+            <version>${seam.config.version}</version>
          </dependency>
 
-         <dependency>
-            <groupId>org.jboss.arquillian.container</groupId>
-            <artifactId>arquillian-weld-se-embedded-1</artifactId>
-            <version>${arquillian.version}</version>
-         </dependency>
-         
-         <!-- Jboss dependencies -->
-         <dependency>
-            <groupId>org.jboss.jbossas</groupId>
-            <artifactId>jboss-server-manager</artifactId>
-            <version>${jboss.server.manager.version}</version>
-         </dependency>
-
-         <dependency>
-            <groupId>org.jboss.jbossas</groupId>
-            <artifactId>jboss-as-client</artifactId>
-            <version>${jboss-as-client.version}</version>
-            <type>pom</type>
-         </dependency>
-      
-         <!-- Jetty Dependencies -->
-      
-         <dependency>
-            <groupId>org.jboss.arquillian.container</groupId>
-            <artifactId>arquillian-jetty-embedded-7</artifactId>
-            <version>${arquillian.version}</version>
-         </dependency>
-            
-         <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-webapp</artifactId>
-            <version>${jetty.version}</version>
-         </dependency>
-      
-         <!-- plus and naming requires for using JNDI -->
-      
-         <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-plus</artifactId>
-            <version>${jetty.version}</version>
-         </dependency>
-      
-         <!-- Weld servlet, EL and JSP required for testing CDI injections -->
-      
-         <dependency>
-            <groupId>org.glassfish.web</groupId>
-            <artifactId>el-impl</artifactId>
-            <version>${el.version}</version>
-         </dependency>
-      
-         <dependency>
-            <groupId>javax.servlet.jsp</groupId>
-            <artifactId>jsp-api</artifactId>
-            <version>${jsp.version}</version>
-         </dependency>
-                  
-         <!-- Temp weld deps -->
-         
-         <dependency>
-            <groupId>org.jboss.weld.servlet</groupId>
-            <artifactId>weld-servlet</artifactId>
-            <version>${weld.version}</version>            
-         </dependency>
-         
-         <dependency>
-            <groupId>org.jboss.weld</groupId>
-            <artifactId>weld-core</artifactId>
-            <version>${weld.version}</version>            
-         </dependency>
-
-         <dependency>
-            <groupId>org.jboss.weld</groupId>
-            <artifactId>weld-core-api</artifactId>
-            <version>${weld.version}</version>            
-         </dependency>
-
-         <dependency>
-            <groupId>org.jboss.weld</groupId>
-            <artifactId>weld-core-spi</artifactId>
-            <version>${weld.version}</version>            
-         </dependency>         
-       
+         <!-- Override CDI/Weld version until tests are upgraded -->
          <dependency>
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
             <version>1.0-SP2</version>
-         </dependency>    
-         
-         <!-- Openjpa -->
-         
+         </dependency>
+
          <dependency>
-           <groupId>org.apache.openjpa</groupId>
-           <artifactId>openjpa-all</artifactId>
-           <version>${openjpa.version}</version>
+            <groupId>org.jboss.weld</groupId>
+            <artifactId>weld-core</artifactId>
+            <version>1.1.0.Beta1</version>
+         </dependency>
+
+         <dependency>
+            <groupId>org.jboss.weld.servlet</groupId>
+            <artifactId>weld-servlet</artifactId>
+            <version>1.1.0.Beta1</version>
          </dependency>
 
       </dependencies>       
@@ -263,15 +119,6 @@
             <module>dist</module>
             <module>docs</module>
          </modules>
-      </profile>
-      <profile>
-         <id>arquillian-glassfish-embedded-30</id>
-         <dependencies>
-            <dependency>
-               <groupId>org.jboss.arquillian.container</groupId>
-               <artifactId>arquillian-glassfish-embedded-30</artifactId>
-            </dependency>
-         </dependencies>
       </profile>
       <profile>
          <id>jboss-public-repository</id>
