--- a/tests/jetty-hibernate/pom.xml
+++ b/tests/jetty-hibernate/pom.xml
@@ -1,29 +1,70 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+   <modelVersion>4.0.0</modelVersion>
+
    <parent>
-      <artifactId>seam-persistence-parent</artifactId>
       <groupId>org.jboss.seam.persistence</groupId>
+      <artifactId>seam-persistence-parent</artifactId>
       <version>3.0.0-SNAPSHOT</version>
       <relativePath>../../pom.xml</relativePath>
    </parent>
 
-   <modelVersion>4.0.0</modelVersion>
-   <groupId>org.jboss.seam.persistence</groupId>
    <artifactId>seam-persistence-tests-jetty</artifactId>
    <packaging>jar</packaging>
-   <version>3.0.0-SNAPSHOT</version>
-   <name>Seam Persistence Jetty Tests</name>
+
+   <name>Seam Persistence Tests: Jetty with Hibernate</name>
+   <!-- url required for JAR Manifest -->
+   <url>${project.parent.url}</url> 
 
    <prerequisites>
       <maven>3.0</maven>
    </prerequisites>
 
-
    <dependencies>
 
+      <!-- including whole API breaks tests -->
+      <!--
       <dependency>
-         <groupId>junit</groupId>
-         <artifactId>junit</artifactId>
-         <scope>test</scope>
+         <groupId>org.jboss.spec</groupId>
+         <artifactId>jboss-javaee-6.0</artifactId>
+         <type>pom</type>
+         <scope>provided</scope>
+      </dependency>
+      -->
+
+      <dependency>
+         <groupId>org.hibernate.javax.persistence</groupId>
+         <artifactId>hibernate-jpa-2.0-api</artifactId>
+         <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+         <groupId>org.jboss.spec.javax.interceptor</groupId>
+         <artifactId>jboss-interceptors-api_1.1_spec</artifactId>
+         <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.jboss.spec.javax.el</groupId>
+        <artifactId>jboss-el-api_2.2_spec</artifactId>
+        <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.jboss.spec.javax.transaction</groupId>
+        <artifactId>jboss-transaction-api_1.1_spec</artifactId>
+        <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+         <groupId>javax.enterprise</groupId>
+         <artifactId>cdi-api</artifactId>
+         <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.jboss.spec.javax.servlet.jsp</groupId>
+        <artifactId>jboss-jsp-api_2.2_spec</artifactId>
+        <scope>provided</scope>
       </dependency>
 
       <dependency>
@@ -34,13 +75,13 @@
 
       <dependency>
          <groupId>org.hibernate</groupId>
-         <artifactId>hibernate-entitymanager</artifactId>
+         <artifactId>hibernate-validator</artifactId>
          <scope>provided</scope>
       </dependency>
 
       <dependency>
-         <groupId>org.hibernate.javax.persistence</groupId>
-         <artifactId>hibernate-jpa-2.0-api</artifactId>
+         <groupId>org.hibernate</groupId>
+         <artifactId>hibernate-entitymanager</artifactId>
          <scope>provided</scope>
       </dependency>
 
@@ -51,33 +92,9 @@
       </dependency>
 
       <dependency>
-         <groupId>hsqldb</groupId>
+         <groupId>org.hsqldb</groupId>
          <artifactId>hsqldb</artifactId>
          <scope>test</scope>
-      </dependency>
-
-      <dependency>
-         <groupId>org.jboss.spec.javax.interceptor</groupId>
-         <artifactId>jboss-interceptors-api_1.1_spec</artifactId>
-         <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-         <groupId>javax.el</groupId>
-         <artifactId>el-api</artifactId>
-         <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-         <groupId>javax.transaction</groupId>
-         <artifactId>jta</artifactId>
-         <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-         <groupId>javax.enterprise</groupId>
-         <artifactId>cdi-api</artifactId>
-         <scope>provided</scope>
       </dependency>
 
       <dependency>
@@ -95,7 +112,7 @@
       <dependency>
          <groupId>org.jboss.seam.config</groupId>
          <artifactId>seam-config-xml</artifactId>
-         <version>${seam.xml.version}</version>
+         <scope>test</scope>
       </dependency>
 
       <dependency>
@@ -111,12 +128,6 @@
       </dependency>
 
       <dependency>
-         <groupId>org.jboss.weld</groupId>
-         <artifactId>weld-core</artifactId>
-         <scope>test</scope>
-      </dependency>
-
-      <dependency>
          <groupId>org.jboss.logging</groupId>
          <artifactId>jboss-logging</artifactId>
          <scope>test</scope>
@@ -124,32 +135,32 @@
 
       <dependency>
          <groupId>org.jboss.seam.solder</groupId>
-         <artifactId>seam-solder</artifactId>
-         <scope>compile</scope>
+         <artifactId>seam-solder-api</artifactId>
       </dependency>
 
       <dependency>
-         <groupId>org.hibernate</groupId>
-         <artifactId>hibernate-search</artifactId>
-         <optional>true</optional>
+         <groupId>org.jboss.seam.solder</groupId>
+         <artifactId>seam-solder-impl</artifactId>
+      </dependency>
+
+      <dependency>
+         <groupId>junit</groupId>
+         <artifactId>junit</artifactId>
       </dependency>
 
       <dependency>
          <groupId>org.jboss.arquillian</groupId>
          <artifactId>arquillian-junit</artifactId>
-         <scope>test</scope>
       </dependency>
 
       <dependency>
          <groupId>org.jboss.seam.persistence</groupId>
          <artifactId>seam-persistence-tests-base</artifactId>
-         <scope>test</scope>
       </dependency>
 
       <dependency>
          <groupId>org.jboss.arquillian.container</groupId>
          <artifactId>arquillian-jetty-embedded-7</artifactId>
-         <scope>test</scope>
       </dependency>
 
       <dependency>
@@ -180,12 +191,6 @@
          <scope>test</scope>
       </dependency>
 
-      <dependency>
-         <groupId>javax.servlet.jsp</groupId>
-         <artifactId>jsp-api</artifactId>
-         <scope>test</scope>
-      </dependency>
-
    </dependencies>
    <build>
       <plugins>
@@ -210,11 +215,4 @@
          </plugin>
       </plugins>
    </build>
-   <scm>
-      <connection>scm:git:git://github.com/seam/persistence.git</connection>
-      <developerConnection>scm:git:git@github.com:seam/persistence.git</developerConnection>
-      <url>http://github.com/seam/persistence</url>
-   </scm>
-
 </project>
-
