--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
    <properties>
       <seam.version>3.0.0.b07</seam.version>
       <seam.config.version>3.0.0.Beta2</seam.config.version>
+      <emma.version>2.0.5312</emma.version>
    </properties>
 
    <dependencyManagement>
@@ -179,6 +180,77 @@
          <modules>
             <module>tests/jbossas-hibernate</module>
          </modules>
+      </profile>
+      <profile>
+         <id>code-coverage</id>
+         <dependencies>
+            <dependency>
+                <groupId>emma</groupId>
+                <artifactId>emma</artifactId>
+                <version>${emma.version}</version>
+            </dependency>
+         </dependencies>
+         <build>
+            <pluginManagement>
+               <plugins>
+                  <plugin>
+                     <groupId>org.sonatype.maven.plugin</groupId>
+                     <artifactId>emma4it-maven-plugin</artifactId>
+                     <executions>
+                        <execution>
+                           <id>report</id>
+                           <phase>post-integration-test</phase>
+                           <goals>
+                              <goal>report</goal>
+                           </goals>
+                           <configuration>
+                              <sourceSets>
+                                 <sourceSet>
+                                    <directory>${project.parent.build.directory}/../impl/src/main/java</directory>
+                                 </sourceSet>
+                              </sourceSets>
+                           </configuration>
+                        </execution>
+                     </executions>
+                  </plugin>
+                  <plugin>
+                     <groupId>org.apache.maven.plugins</groupId>
+                     <artifactId>maven-antrun-plugin</artifactId>
+                     <executions>
+                        <execution>
+                           <id>retrieve-coverage-files</id>
+                           <phase>post-integration-test</phase>
+                           <goals>
+                              <goal>run</goal>
+                           </goals>
+                           <configuration>
+                              <tasks>
+                                 <copy file="${project.parent.build.directory}/../impl/target/coverage.em"
+                                       todir="${basedir}" />
+                              </tasks>
+                           </configuration>
+                        </execution>
+                     </executions>
+                  </plugin>
+                  <plugin>
+                     <artifactId>maven-clean-plugin</artifactId>
+                     <configuration>
+                        <filesets>
+                           <fileset>
+                              <directory>${basedir}/</directory>
+                              <includes>
+                                 <include>**/*.ec</include>
+                                 <include>**/*.em</include>
+                                 <include>**/transaction.log</include>
+                              </includes>
+                              <followSymlinks>false</followSymlinks>
+                           </fileset>
+                        </filesets>
+                     </configuration>
+                  </plugin>
+               </plugins>
+            </pluginManagement>
+         </build>
       </profile>
    </profiles>
 
