--- a/tests/jetty-openjpa/pom.xml
+++ b/tests/jetty-openjpa/pom.xml
@@ -160,6 +160,7 @@
       </dependency>
 
    </dependencies>
+   
    <build>
       <plugins>
          <plugin>
@@ -185,4 +186,23 @@
          </plugin>
       </plugins>
    </build>
+   
+   <profiles>
+      <profile>
+         <id>code-coverage</id>
+         <build>
+            <plugins>
+               <plugin>
+                  <groupId>org.sonatype.maven.plugin</groupId>
+                  <artifactId>emma4it-maven-plugin</artifactId>
+               </plugin>
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-antrun-plugin</artifactId>
+               </plugin>
+            </plugins>
+         </build>
+      </profile>
+   </profiles>
+   
 </project>
