--- a/tests/base/pom.xml
+++ b/tests/base/pom.xml
@@ -20,11 +20,21 @@
    </prerequisites>
 
    <dependencies>
-      <!-- all scopes are listed as provided, so the sub modules can pull in what they actually need -->
       <dependency>
-         <groupId>org.jboss.spec</groupId>
-         <artifactId>jboss-javaee-6.0</artifactId>
-         <type>pom</type>
+         <groupId>javax.enterprise</groupId>
+         <artifactId>cdi-api</artifactId>
+         <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+         <groupId>org.jboss.spec.javax.ejb</groupId>
+         <artifactId>jboss-ejb-api_3.1_spec</artifactId>
+         <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+         <groupId>javax.validation</groupId>
+         <artifactId>validation-api</artifactId>
          <scope>provided</scope>
       </dependency>
 
