--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ target
 .settings
 *.sw?
 transaction.log
+tests/jetty-hibernate/data
+tests/jetty-hibernate/org.jboss.seam.persistence.test.util.IndexedHotel
