Restored EjbSynchronizations for compatability with AS7 - You must now configure TransactionManagerSynchronizations if desired - tests not passing yet

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ target
 .project
 .settings
 *.sw?
+bin/
 transaction.log
 tests/jetty-hibernate/data
 tests/jetty-hibernate/org.jboss.seam.persistence.test.util.IndexedHotel
