--- a/tests/base/pom.xml
+++ b/tests/base/pom.xml
@@ -47,7 +47,7 @@
 
         <dependency>
             <groupId>org.jboss.seam.persistence</groupId>
-            <artifactId>seam-persistence-impl</artifactId>
+            <artifactId>seam-persistence</artifactId>
             <scope>provided</scope>
         </dependency>
 
