--- a/tests/jbossas-hibernate/pom.xml
+++ b/tests/jbossas-hibernate/pom.xml
@@ -80,7 +80,7 @@
 
         <dependency>
             <groupId>org.jboss.seam.persistence</groupId>
-            <artifactId>seam-persistence-impl</artifactId>
+            <artifactId>seam-persistence</artifactId>
         </dependency>
 
         <dependency>
