--- a/tests/jetty-hibernate/pom.xml
+++ b/tests/jetty-hibernate/pom.xml
@@ -106,7 +106,7 @@
 
         <dependency>
             <groupId>org.jboss.seam.persistence</groupId>
-            <artifactId>seam-persistence-impl</artifactId>
+            <artifactId>seam-persistence</artifactId>
             <scope>test</scope>
         </dependency>
 
