--- a/tests/base/pom.xml
+++ b/tests/base/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.jboss.seam.persistence</groupId>
         <artifactId>seam-persistence-parent</artifactId>
-        <version>3.0.1-SNAPSHOT</version>
+        <version>3.1.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -76,11 +76,11 @@
             <scope>provided</scope>
         </dependency>
 
-        <dependency>
+        <!--dependency>
             <groupId>org.jboss.arquillian</groupId>
             <artifactId>arquillian-junit</artifactId>
             <scope>provided</scope>
-        </dependency>
+        </dependency-->
     </dependencies>
 
     <build>
