--- a/tests/jetty-hibernate/pom.xml
+++ b/tests/jetty-hibernate/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.jboss.seam.persistence</groupId>
         <artifactId>seam-persistence-parent</artifactId>
-        <version>3.0.1-SNAPSHOT</version>
+        <version>3.1.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -133,10 +133,10 @@
             <artifactId>junit</artifactId>
         </dependency>
 
-        <dependency>
+        <!--dependency>
             <groupId>org.jboss.arquillian</groupId>
             <artifactId>arquillian-junit</artifactId>
-        </dependency>
+        </dependency-->
 
         <dependency>
             <groupId>org.jboss.seam.persistence</groupId>
