--- a/tests/base/pom.xml
+++ b/tests/base/pom.xml
@@ -76,6 +76,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+           <groupId>org.jboss.arquillian</groupId>
+           <artifactId>arquillian-junit</artifactId>
+           <version>1.0.0.Alpha5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
