Arquillian update, cleanup, use MavenDependencyResolver, use hibernate-search 4.0.0.Beta2 on AS7

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -43,6 +43,8 @@
     </dependencies>
 
     <build>
+        <finalName>seam-persistence-api</finalName>
+
         <plugins>
             <!-- no test phase for API module -->
             <plugin>
